2012-08-17  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/inet/syscalls.list: File removed.  Move contents into ...
	* sysdeps/unix/syscalls.list: ... here.

	* sysdeps/posix/getaddrinfo.c
	(save_gaiconf_mtime, check_gaiconf_mtime): New functions.
	(gaiconf_init, gaiconf_reload): Use them.
	[!_STATBUF_ST_NSEC]
	(gaiconf_mtime, save_gaiconf_mtime, check_gaiconf_mtime):
	Define using time_t rather than struct timespec.

	* sysdeps/generic/malloc-machine.h (MUTEX_INITIALIZER): New macro.
	(atomic_full_barrier, atomic_read_barrier, atomic_write_barrier):
	Macros removed.
	* malloc/arena.c (save_malloc_hook, save_free_hook): Conditionalize on
	[!NO_THREADS].
	(malloc_atfork, free_atfork, atfork_recursive_cntr): Likewise.
	(ptmalloc_lock_all, ptmalloc_unlock_all, ptmalloc_unlock_all2):
	Likewise.

	* elf/dl-iteratephdr.c (__dl_iterate_phdr): Use NULL rather than 0 for
	__libc_cleanup_push argument.

	* bits/param.h: New file.
	* misc/sys/param.h: New file.
	* include/sys/param.h: New file.
	* misc/Makefile (headers): Add bits/param.h.
	* sysdeps/generic/sys/param.h: File removed.
	* sysdeps/unix/sysv/linux/bits/param.h: New file.
	* sysdeps/unix/sysv/linux/sys/param.h: File removed.
	* sysdeps/mach/hurd/bits/param.h: New file.
	* sysdeps/mach/hurd/sys/param.h: New file.

	* elf/dl-close.c (_dl_close_worker): Add a cast and a comment to the
	last change.

	* libio/genops.c (_IO_unbuffer_write): Conditionalize locking code on
	[_IO_MTSAFE_IO].
	* libio/libioP.h [!_IO_MTSAFE_IO && !NOT_IN_libc]
	(_IO_acquire_lock, _IO_acquire_lock_clear_flags2, _IO_release_lock):
	New macros.

	* Makeconfig [$(libc-reentrant) = yes] (libio-mtsafe): New variable.
	* libio/Makefile (CPPFLAGS): Append $(libio-mtsafe) unconditionally
	rather than -D_IO_MTSAFE_IO conditionally.
	* stdio-common/Makefile (CPPFLAGS): Likewise.
	* wcsmbs/Makefile (CPPFLAGS): Likewise.
	* stdlib/Makefile (CFLAGS-strfmon.c, CFLAGS-strfmon_l.c):
	Use $(libio-mtsafe).