@@ -1,3 +1,15 @@
+2012-08-17  Jeff Law <law@redhat.com>
+
+	* intl/Makefile (codeset_mo): New variable.
+	($(codeset_mo)): New target.
+	(tst-codeset.out): Depend on that.  Remove explicit rule.
+	(tst-gettext3.out, tst-gettext5.out): Likewise.
+	(LOCPATH-ENV, tst-codeset-ENV): New variables.
+	(tst-gettext3-ENV, tst-gettext5-ENV): Likewise.
+	* intl/tst-codeset.sh: Remove.
+	* intl/tst-gettext3.sh: Likewise.
+	* intl/tst-gettext5.sh: Likewise.
+
 2012-08-17  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/unix/inet/syscalls.list: File removed.  Move contents into ...
